backend is 100% production-ready for:
E-commerce core functionality
Security requirements
Performance & resilience
Data integrity